# RoadToMistral

./: .cache  .env  .gitignore  .python-version  Eloan.ipynb  README.md  artist.py  connectionSpotipy.py  earnest-entry-472108-j8-5ce461f78daf.json  fastMCP.ipynb  generateAnyPlaylist.py  my_server.py  output.txt  pyproject.toml  run_mcp_server.py  shared_mcp.py
script/: .cache  mcp_tools.ipynb  server_launch.ipynb  server_launch.py  spotify_API_call.ipynb
src/: .cache  Genius.py  Lyria.py  MySonglib.py  Playlistlib.py  Wikipedia.py  artist.py  build_custom_playlist.py  client_mistral.py  get_id  get_id.py  musique.py  musiqueLib.py  my_server.py  spotify.py  spotify_connector.py  spotify_infos.py  test_spotipy.ipynb
src/Agent/: build_custom_playlist.py
src/outdated/: Lyria.py  spotify_connector.py  test_spotipy.ipynb
src/server_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
