[project]
name = "server_mcp"
version = "0.1.0"
description = "Description courte de ton projet"
authors = [
    { name = "Eloan", email = "alexis.maes@solutions.mistral.ai" }
]
requires-python = ">=3.12"


dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "ngrok>=1.5.1",
    "pydantic>=2.11.8",
    "pyngrok>=7.3.0",
    "python-dotenv>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
